# cache-allocator

./: .gitignore  CMakeLists.txt  README.md  allocation_simulator.cpp  cache_cluster.cpp  cache_server.cpp  dp_solver.cpp
exp/: cloudphoto-day-reply.sh  cloudphoto-day1-reply.sh  cloudphoto-day2-dp-solve.sh  cloudphoto-day2-reply.sh  size.sh  test.sh
exp/log_7_29/: cache_beh_cloud_photos-sample.csv_lru_n_server_1:1MB.vlog  cache_beh_test.csv_lru_n_server_1:1MB.vlog  test_cloud_photos-sample.csv_lru_n_server_3:1MB_1MB_2MB.vlog  test_cloud_photos-sample.csv_lru_n_server_3:1_MB1_MB2_MB.vlog  test_cloud_photos-sample.csv_lru_n_server_6:1048576MB_1048576MB_1048576MB_1048576MB_1048576MB_1048576MB.csv
exp/log_7_31/: cloudphoto-day1-reply_2016020100-2016020200.csv_sort.csv_lru_n_server_6:268435456MB_268435456MB_268435456MB_268435456MB_268435456MB_268435456MB.vlog
exp/scripts/: flows_multi_tenant.py  profile_multi_tenant.py  shards_multi_tenant.py
include/: allocation_simulator.hpp  args.hpp  cache_cluster.hpp  cache_server.hpp  const.hpp  dp_solver.hpp  stat.hpp
misc/: clean_data.py  cloud_photo_trans.py  collect_result.py  external_sort.py  interpolation.py  split_tenant.py  split_trace.py  trace_stat.py  unique_size.py
result/flows_res/2016020100-2016020200_unique/: tenant_1_profile_res-FIX_RATE-FLOWS-0.01.csv  tenant_2_profile_res-FIX_RATE-FLOWS-0.01.csv  tenant_3_profile_res-FIX_RATE-FLOWS-0.01.csv  tenant_4_profile_res-FIX_RATE-FLOWS-0.01.csv  (+2 more)
result/flows_res_1000/: extract_csv.py
result/traffic_stat/: 2016020100-2016020200_unique  2016020200-2016020300_unique  2016020300-2016020400_unique  2016020400-2016020500_unique  2016020500-2016020600_unique  2016020600-2016020700_unique  2016020700-2016020800_unique  2016020800-2016020900_unique  2016020900-2016021000_unique
test/: CMakeLists.txt  test_cache_server.cpp
(+208 files in other folders)
